<resources>
    <string name="app_name">Tabletop Dice Roller</string>

    <!--Resources for the Custom Roll Fragment-->
    <string name="numSides">Enter number of sides:</string>
    <string name="numDice">Enter number of dice:</string>
    <string name="emptyEditText">#</string>

    <!--Resources for AddNewFavorite Fragment-->
    <string name="favCreateButton">Create</string>
    <string name="favBackButton">Back</string>
    <string name="favTextViewNumSides">Number of sides per dice:</string>
    <string name="favTextViewNumDice">Number of dice:</string>
    <string name="favTextViewPleaseName">Give a name to this roll, then press \'Create\':</string>



</resources>
