<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--Dummy box to be focused on when I don't want other things to have focus-->
    <LinearLayout
        android:layout_width="0px"
        android:layout_height="0px"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="124dp"
        android:layout_height="64dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/favCreateButton"
        android:contentDescription="Add this roll to your favorites"/>

    <Button
        android:id="@+id/back_button"
        android:layout_width="124dp"
        android:layout_height="64dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/favBackButton"
        android:contentDescription="Return to the Custom Roll screen"/>

    <TextView
        android:id="@+id/favTextViewNumSides"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/favTextViewNumDice"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginBottom="64dp"
        android:text="@string/favTextViewNumSides"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/favDisplayNumSides"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/favTextViewNumDice"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="301dp"
        android:layout_marginLeft="301dp"
        android:layout_marginBottom="64dp"
        android:gravity="right"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/favTextViewNumDice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginBottom="175dp"
        android:text="@string/favTextViewNumDice"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/favDisplayNumDice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="301dp"
        android:layout_marginLeft="301dp"
        android:layout_marginBottom="175dp"
        android:gravity="right"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/rollNamePrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="33dp"
        android:layout_marginLeft="33dp"
        android:layout_marginEnd="31dp"
        android:layout_marginRight="31dp"
        android:layout_marginBottom="470dp"
        android:text="@string/favTextViewPleaseName"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/rollNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="396dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Enter the name of your roll here."
        android:maxLength="17"
        android:selectAllOnFocus="true"
        android:contentDescription="Enter the name of your roll here"
        />

</RelativeLayout>